import { GeneratedType } from "@cosmjs/proto-signing";
import { MsgCreateTransporterTradeRejectedResponse } from "./types/logisticsbeta/logisticsbeta/tx";
import { MsgCreateVendorTradeReject } from "./types/logisticsbeta/logisticsbeta/tx";
import { QueryParamsResponse } from "./types/logisticsbeta/logisticsbeta/query";
import { QueryAllVendorRequest } from "./types/logisticsbeta/logisticsbeta/query";
import { QueryAllVendorResponse } from "./types/logisticsbeta/logisticsbeta/query";
import { Vendor } from "./types/logisticsbeta/logisticsbeta/vendor";
import { MsgCreateTransporter } from "./types/logisticsbeta/logisticsbeta/tx";
import { QueryGetVendorResponse } from "./types/logisticsbeta/logisticsbeta/query";
import { QueryGetTransporterResponse } from "./types/logisticsbeta/logisticsbeta/query";
import { QueryGetTradeResponse } from "./types/logisticsbeta/logisticsbeta/query";
import { MsgCreatePurchaserResponse } from "./types/logisticsbeta/logisticsbeta/tx";
import { MsgUpdateParamsResponse } from "./types/logisticsbeta/logisticsbeta/tx";
import { MsgCreateVendorTradeAcceptResponse } from "./types/logisticsbeta/logisticsbeta/tx";
import { QueryGetPurchaserRequest } from "./types/logisticsbeta/logisticsbeta/query";
import { QueryAllPurchaserRequest } from "./types/logisticsbeta/logisticsbeta/query";
import { QueryGetSystemInfo4Response } from "./types/logisticsbeta/logisticsbeta/query";
import { QueryGetSystemInfo1Response } from "./types/logisticsbeta/logisticsbeta/query";
import { MsgCreateTrade } from "./types/logisticsbeta/logisticsbeta/tx";
import { MsgCreatePurchaser } from "./types/logisticsbeta/logisticsbeta/tx";
import { QueryGetSystemInfo4Request } from "./types/logisticsbeta/logisticsbeta/query";
import { SystemInfo3 } from "./types/logisticsbeta/logisticsbeta/system_info_3";
import { QueryAllTradeRequest } from "./types/logisticsbeta/logisticsbeta/query";
import { MsgCreateTransporterVendorReached } from "./types/logisticsbeta/logisticsbeta/tx";
import { SystemInfo1 } from "./types/logisticsbeta/logisticsbeta/system_info_1";
import { Trade } from "./types/logisticsbeta/logisticsbeta/trade";
import { MsgCreateTransporterTradeRejected } from "./types/logisticsbeta/logisticsbeta/tx";
import { Params } from "./types/logisticsbeta/logisticsbeta/params";
import { Transporter } from "./types/logisticsbeta/logisticsbeta/transporter";
import { QueryGetSystemInfo2Response } from "./types/logisticsbeta/logisticsbeta/query";
import { MsgUpdateParams } from "./types/logisticsbeta/logisticsbeta/tx";
import { Purchaser } from "./types/logisticsbeta/logisticsbeta/purchaser";
import { QueryGetSystemInfo1Request } from "./types/logisticsbeta/logisticsbeta/query";
import { QueryGetPurchaserResponse } from "./types/logisticsbeta/logisticsbeta/query";
import { GenesisState } from "./types/logisticsbeta/logisticsbeta/genesis";
import { QueryAllTransporterResponse } from "./types/logisticsbeta/logisticsbeta/query";
import { MsgCreateVendorResponse } from "./types/logisticsbeta/logisticsbeta/tx";
import { QueryGetTradeRequest } from "./types/logisticsbeta/logisticsbeta/query";
import { QueryAllTradeResponse } from "./types/logisticsbeta/logisticsbeta/query";
import { MsgCreateVendorTradeRejectResponse } from "./types/logisticsbeta/logisticsbeta/tx";
import { SystemInfo2 } from "./types/logisticsbeta/logisticsbeta/system_info_2";
import { MsgCreateTransporterTradeAccepted } from "./types/logisticsbeta/logisticsbeta/tx";
import { QueryParamsRequest } from "./types/logisticsbeta/logisticsbeta/query";
import { QueryGetSystemInfo3Response } from "./types/logisticsbeta/logisticsbeta/query";
import { SystemInfo4 } from "./types/logisticsbeta/logisticsbeta/system_info_4";
import { MsgCreateVendor } from "./types/logisticsbeta/logisticsbeta/tx";
import { QueryGetSystemInfo2Request } from "./types/logisticsbeta/logisticsbeta/query";
import { QueryGetSystemInfo3Request } from "./types/logisticsbeta/logisticsbeta/query";
import { MsgCreateVendorTradeAccept } from "./types/logisticsbeta/logisticsbeta/tx";
import { QueryGetVendorRequest } from "./types/logisticsbeta/logisticsbeta/query";
import { QueryGetTransporterRequest } from "./types/logisticsbeta/logisticsbeta/query";
import { MsgCreateTradeResponse } from "./types/logisticsbeta/logisticsbeta/tx";
import { MsgCreateTransporterTradeAcceptedResponse } from "./types/logisticsbeta/logisticsbeta/tx";
import { QueryAllPurchaserResponse } from "./types/logisticsbeta/logisticsbeta/query";
import { QueryAllTransporterRequest } from "./types/logisticsbeta/logisticsbeta/query";
import { MsgCreateTransporterResponse } from "./types/logisticsbeta/logisticsbeta/tx";
import { MsgCreateTransporterVendorReachedResponse } from "./types/logisticsbeta/logisticsbeta/tx";

const msgTypes: Array<[string, GeneratedType]>  = [
    ["/logisticsbeta.logisticsbeta.MsgCreateTransporterTradeRejectedResponse", MsgCreateTransporterTradeRejectedResponse],
    ["/logisticsbeta.logisticsbeta.MsgCreateVendorTradeReject", MsgCreateVendorTradeReject],
    ["/logisticsbeta.logisticsbeta.QueryParamsResponse", QueryParamsResponse],
    ["/logisticsbeta.logisticsbeta.QueryAllVendorRequest", QueryAllVendorRequest],
    ["/logisticsbeta.logisticsbeta.QueryAllVendorResponse", QueryAllVendorResponse],
    ["/logisticsbeta.logisticsbeta.Vendor", Vendor],
    ["/logisticsbeta.logisticsbeta.MsgCreateTransporter", MsgCreateTransporter],
    ["/logisticsbeta.logisticsbeta.QueryGetVendorResponse", QueryGetVendorResponse],
    ["/logisticsbeta.logisticsbeta.QueryGetTransporterResponse", QueryGetTransporterResponse],
    ["/logisticsbeta.logisticsbeta.QueryGetTradeResponse", QueryGetTradeResponse],
    ["/logisticsbeta.logisticsbeta.MsgCreatePurchaserResponse", MsgCreatePurchaserResponse],
    ["/logisticsbeta.logisticsbeta.MsgUpdateParamsResponse", MsgUpdateParamsResponse],
    ["/logisticsbeta.logisticsbeta.MsgCreateVendorTradeAcceptResponse", MsgCreateVendorTradeAcceptResponse],
    ["/logisticsbeta.logisticsbeta.QueryGetPurchaserRequest", QueryGetPurchaserRequest],
    ["/logisticsbeta.logisticsbeta.QueryAllPurchaserRequest", QueryAllPurchaserRequest],
    ["/logisticsbeta.logisticsbeta.QueryGetSystemInfo4Response", QueryGetSystemInfo4Response],
    ["/logisticsbeta.logisticsbeta.QueryGetSystemInfo1Response", QueryGetSystemInfo1Response],
    ["/logisticsbeta.logisticsbeta.MsgCreateTrade", MsgCreateTrade],
    ["/logisticsbeta.logisticsbeta.MsgCreatePurchaser", MsgCreatePurchaser],
    ["/logisticsbeta.logisticsbeta.QueryGetSystemInfo4Request", QueryGetSystemInfo4Request],
    ["/logisticsbeta.logisticsbeta.SystemInfo3", SystemInfo3],
    ["/logisticsbeta.logisticsbeta.QueryAllTradeRequest", QueryAllTradeRequest],
    ["/logisticsbeta.logisticsbeta.MsgCreateTransporterVendorReached", MsgCreateTransporterVendorReached],
    ["/logisticsbeta.logisticsbeta.SystemInfo1", SystemInfo1],
    ["/logisticsbeta.logisticsbeta.Trade", Trade],
    ["/logisticsbeta.logisticsbeta.MsgCreateTransporterTradeRejected", MsgCreateTransporterTradeRejected],
    ["/logisticsbeta.logisticsbeta.Params", Params],
    ["/logisticsbeta.logisticsbeta.Transporter", Transporter],
    ["/logisticsbeta.logisticsbeta.QueryGetSystemInfo2Response", QueryGetSystemInfo2Response],
    ["/logisticsbeta.logisticsbeta.MsgUpdateParams", MsgUpdateParams],
    ["/logisticsbeta.logisticsbeta.Purchaser", Purchaser],
    ["/logisticsbeta.logisticsbeta.QueryGetSystemInfo1Request", QueryGetSystemInfo1Request],
    ["/logisticsbeta.logisticsbeta.QueryGetPurchaserResponse", QueryGetPurchaserResponse],
    ["/logisticsbeta.logisticsbeta.GenesisState", GenesisState],
    ["/logisticsbeta.logisticsbeta.QueryAllTransporterResponse", QueryAllTransporterResponse],
    ["/logisticsbeta.logisticsbeta.MsgCreateVendorResponse", MsgCreateVendorResponse],
    ["/logisticsbeta.logisticsbeta.QueryGetTradeRequest", QueryGetTradeRequest],
    ["/logisticsbeta.logisticsbeta.QueryAllTradeResponse", QueryAllTradeResponse],
    ["/logisticsbeta.logisticsbeta.MsgCreateVendorTradeRejectResponse", MsgCreateVendorTradeRejectResponse],
    ["/logisticsbeta.logisticsbeta.SystemInfo2", SystemInfo2],
    ["/logisticsbeta.logisticsbeta.MsgCreateTransporterTradeAccepted", MsgCreateTransporterTradeAccepted],
    ["/logisticsbeta.logisticsbeta.QueryParamsRequest", QueryParamsRequest],
    ["/logisticsbeta.logisticsbeta.QueryGetSystemInfo3Response", QueryGetSystemInfo3Response],
    ["/logisticsbeta.logisticsbeta.SystemInfo4", SystemInfo4],
    ["/logisticsbeta.logisticsbeta.MsgCreateVendor", MsgCreateVendor],
    ["/logisticsbeta.logisticsbeta.QueryGetSystemInfo2Request", QueryGetSystemInfo2Request],
    ["/logisticsbeta.logisticsbeta.QueryGetSystemInfo3Request", QueryGetSystemInfo3Request],
    ["/logisticsbeta.logisticsbeta.MsgCreateVendorTradeAccept", MsgCreateVendorTradeAccept],
    ["/logisticsbeta.logisticsbeta.QueryGetVendorRequest", QueryGetVendorRequest],
    ["/logisticsbeta.logisticsbeta.QueryGetTransporterRequest", QueryGetTransporterRequest],
    ["/logisticsbeta.logisticsbeta.MsgCreateTradeResponse", MsgCreateTradeResponse],
    ["/logisticsbeta.logisticsbeta.MsgCreateTransporterTradeAcceptedResponse", MsgCreateTransporterTradeAcceptedResponse],
    ["/logisticsbeta.logisticsbeta.QueryAllPurchaserResponse", QueryAllPurchaserResponse],
    ["/logisticsbeta.logisticsbeta.QueryAllTransporterRequest", QueryAllTransporterRequest],
    ["/logisticsbeta.logisticsbeta.MsgCreateTransporterResponse", MsgCreateTransporterResponse],
    ["/logisticsbeta.logisticsbeta.MsgCreateTransporterVendorReachedResponse", MsgCreateTransporterVendorReachedResponse],
    
];

export { msgTypes }